css fix for disallowing auto zooming on input fields in mobile, css visibility fixes responsive to mobile for Top Bar, minor responsive css fixes on composition components

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,20 @@
  */
 
 @media only screen
+and (-webkit-min-device-pixel-ratio:0)
+and (max-width: 768px) {
+  input,
+  textarea,
+  select,
+  input:focus,
+  textarea:focus,
+  select:focus {
+    font-size: 16px;
+  }
+}
+
+
+@media only screen
 and (max-width: 1280px) {
   html, body {
     height: 100%;
