--- a/app/react/components/AgendaItemComposer/AgendaItemComposer.css
+++ b/app/react/components/AgendaItemComposer/AgendaItemComposer.css
@@ -1,6 +1,6 @@
 .root {
-  padding-left: 32px;
-  padding-right: 32px;
+  padding-left: 3.75rem;
+  padding-right: 2rem;
 }
 
 .row {
@@ -22,14 +22,14 @@
 
 .formRow {
   composes: row;
-  margin-bottom: 76px;
+  margin-bottom: 4.75rem;
 }
 
 .form {
   flex: 1;
   color: #415764;
-  margin: 32px 32px 0 0px;
-  font-size: 1.1rem;
+  margin: 2rem 2rem 0 0;
+  font-size: 1.375rem;
 }
 
 .form :global .react-mentions .control.textarea {
@@ -41,7 +41,6 @@
   align-self: flex-end;
   min-width: 5rem;
   text-align: right;
-  margin-bottom: 0.5rem;
 }
 
 .charsHintRed {
@@ -52,6 +51,5 @@
 .composeHeader {
   display: inline-block;
   background-color: #415764;
-  padding: 10px;
-  padding-right: 40px;
+  padding: 0.625rem 2.5rem 0.625rem 2.5rem;
 }
